testing out reducers

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "webpack -w --mode=development",
     "pro": "webpack --mode=production",
+    "test": "webpack --config ./test/config.test.js -w  --mode=development",
     "start": "npm run pro && node server.js"
   },
   "dependencies": {
