--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "socket.io": "^2.1.0"
   },
   "devDependencies": {
+    "expect": "^22.4.3",
+    "jest": "^22.4.3",
+    "supertest": "^3.0.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14"
   }
