--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   "scripts": {
     "dev": "webpack -w --mode=development",
     "pro": "webpack --mode=production",
+    "test-w": "jest --watchAll",
     "test": "jest",
     "start": "npm run pro && node server.js"
+  },
+  "engines": {
+    "node": "9.5.0"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -27,8 +31,9 @@
     "socket.io": "^2.1.0"
   },
   "devDependencies": {
-    "expect": "^22.4.3",
+    "babel-jest": "^22.4.3",
     "jest": "^22.4.3",
+    "react-test-renderer": "^16.3.2",
     "supertest": "^3.0.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14"
