--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "pro": "webpack --mode=production",
     "test-w": "jest --watchAll",
     "test": "jest",
-    "start": "yarn pro && node server.js"
+    "start": "npm pro && node server.js"
   },
   "engines": {
-    "node": "^10.0.0"
+    "node": "^10.0.0",
+    "npm": "^6.0.0"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "express": "^4.16.2",
