--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "start": "npm pro && node server.js"
   },
   "engines": {
-    "node": "^8.11.0",
-    "npm": "^6.0.0"
+    "node": "^8.11.0"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
